--- a/python_challenge2020/templates/contact.html
+++ b/python_challenge2020/templates/contact.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Title</title>
-  </head>
-  <body>
-    <h1>Job search</h1>
-    <!--<form action="/report" method="get">-->
-    <!--    <input placeholder="Enter search word" required name="word"/>-->
-    <!--    <button>Search</button>-->
-    <!--</form>-->
+</head>
+<body>
+<h1>Job search</h1>
+<!--<form action="/report" method="get">-->
+<!--    <input placeholder="Enter search word" required name="word"/>-->
+<!--    <button>Search</button>-->
+<!--</form>-->
 
-    <form action="/kimchi" method="get">
-      <input placeholder="What job do want to find?? " required name="word" />
-      <button>Search</button>
-    </form>
+<form action="/kimchi" method="get">
+    <input placeholder="What job do want to find?? " required name="word"/>
+    <button>Search</button>
+</form>
 
-    <form action="/tomato" method="get">
-      <!--    <input type="text" required name="tomato2">-->
-      <input type="tomato text" required name="food" />
-    </form>
-  </body>
+<form action="/tomato" method="get">
+    <!--    <input type="text" required name="tomato2">-->
+    <input type="tomato text" required name="food"/>
+</form>
+
+<form action="/test_action" method="get">
+    <input type="text" name="un" placeholder="name">
+    <!--    <input type="text" name="di" placeholder="favorite dish">-->
+</form>
+</body>
 </html>
