--- a/python_challenge2020/templates/contact.html
+++ b/python_challenge2020/templates/contact.html
@@ -21,8 +21,8 @@
     <input type="tomato text" required name="food"/>
 </form>
 
-<form action="/test_action" method="get">
-    <input type="text" name="un" placeholder="name">
+<form action="/report" method="get">
+    <input type="text" name="word" placeholder="word to find"/>
     <!--    <input type="text" name="di" placeholder="favorite dish">-->
 </form>
 </body>
